--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -19,9 +19,9 @@ div#interface {
 }
 
 header#cabecalho img#icone {
-    position: absolute;
-    left: 780px;
-    top: 70px;
+    position: relative;
+    left: 656px;
+    top: -130px;
 }
 
 header#cabecalho {
@@ -102,9 +102,9 @@ nav#menu {
 nav#menu ul {
     list-style: none;
     text-transform: uppercase;
-    position: absolute;
-    top: -20px;
-    left: 300px;
+    position: relative;
+    top: -112px;
+    left: 266px;
 }
 
 nav#menu li {
